force-app/main/default/objects/Review__c/fields/Admissions_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Agreement__c</fullName>
    <label>Admissions Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>