force-app/main/default/objects/Review__c/fields/Admissions_Agreement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Agreement_Notes__c</fullName>
    <label>Admissions Agreement - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>