force-app/main/default/objects/Review__c/fields/Admissions_Comments_and_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Comments_and_Recommendation__c</fullName>
    <label>Admissions - Comments and Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>