force-app/main/default/objects/Review__c/fields/ASAM_LOCUS__c.field-meta.xml
<CustomField>
    <fullName>ASAM_LOCUS__c</fullName>
    <label>ASAM/LOCUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>