force-app/main/default/objects/Review__c/fields/ASAM_LOCUS_Notes__c.field-meta.xml
<CustomField>
    <fullName>ASAM_LOCUS_Notes__c</fullName>
    <label>ASAM/LOCUS - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>