force-app/main/default/objects/Review__c/fields/Biopsychosocial__c.field-meta.xml
<CustomField>
    <fullName>Biopsychosocial__c</fullName>
    <label>Biopsychosocial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>