force-app/main/default/objects/Review__c/fields/Biopsychosocial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Biopsychosocial_Notes__c</fullName>
    <label>Biopsychosocial - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>