force-app/main/default/objects/Review__c/fields/Combined_Text_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Combined_Text_Supervisor__c</fullName>
    <label>Combined Text Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>