force-app/main/default/objects/Review__c/fields/Compliance_Overall__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Overall__c</fullName>
    <label>Compliance Overall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>