force-app/main/default/objects/Review__c/fields/Consent_to_Treat__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Treat__c</fullName>
    <label>Consent to Treat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>