force-app/main/default/objects/Review__c/fields/Consent_to_Treat_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Treat_Notes__c</fullName>
    <label>Consent to Treat - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>