force-app/main/default/objects/Review__c/fields/CSSR_S__c.field-meta.xml
<CustomField>
    <fullName>CSSR_S__c</fullName>
    <label>CSSR-S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>