force-app/main/default/objects/Review__c/fields/CSSR_S_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSSR_S_Notes__c</fullName>
    <label>CSSR-S - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>