force-app/main/default/objects/Review__c/fields/Current_Service_Facility__c.field-meta.xml
<CustomField>
    <fullName>Current_Service_Facility__c</fullName>
    <formula>BLANKVALUE(TEXT(Opportunity__r.Facility_Approved__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Service Facility</label>
    <type>Text</type>
</CustomField>