force-app/main/default/objects/Review__c/fields/Detox_Treatment_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detox_Treatment_Plan_Notes__c</fullName>
    <label>Detox Treatment Plan - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>