force-app/main/default/objects/Review__c/fields/Discharge_Summary__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Summary__c</fullName>
    <label>Discharge Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>