force-app/main/default/objects/Review__c/fields/Discharge_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Summary_Notes__c</fullName>
    <label>Discharge Summary - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>