force-app/main/default/objects/Review__c/fields/Family_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Family_Session_Notes__c</fullName>
    <label>Family Session - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>