force-app/main/default/objects/Review__c/fields/Group_Session__c.field-meta.xml
<CustomField>
    <fullName>Group_Session__c</fullName>
    <label>Group Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>