force-app/main/default/objects/Review__c/fields/Group_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Group_Session_Notes__c</fullName>
    <label>Group Session - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>