force-app/main/default/objects/Review__c/fields/H_P_within_24hrs__c.field-meta.xml
<CustomField>
    <fullName>H_P_within_24hrs__c</fullName>
    <label>H&amp;P within 24hrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>