force-app/main/default/objects/Review__c/fields/H_P_within_24hrs_Notes__c.field-meta.xml
<CustomField>
    <fullName>H_P_within_24hrs_Notes__c</fullName>
    <label>H&amp;P within 24hrs - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>