force-app/main/default/objects/Review__c/fields/HP_within_24hrs_Score_c__c.field-meta.xml
<CustomField>
    <fullName>HP_within_24hrs_Score_c__c</fullName>
    <formula>CASE(
    TEXT( H_P_within_24hrs__c),
    &apos;Compliance&apos;, 100,
    &apos;Partial Compliance&apos;, 50,
    &apos;Non-Compliance&apos;, 0,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HP_within_24hrs_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>