force-app/main/default/objects/Review__c/fields/Individual_Session__c.field-meta.xml
<CustomField>
    <fullName>Individual_Session__c</fullName>
    <label>Individual Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>