force-app/main/default/objects/Review__c/fields/Individual_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Individual_Session_Notes__c</fullName>
    <label>Individual Session - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>