force-app/main/default/objects/Review__c/fields/Initial_Nursing_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Nursing_Assessment__c</fullName>
    <label>Initial Nursing Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>