force-app/main/default/objects/Review__c/fields/Initial_Nursing_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Nursing_Assessment_Notes__c</fullName>
    <label>Initial Nursing Assessment - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>