force-app/main/default/objects/Review__c/fields/Intake_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Intake_Assessment__c</fullName>
    <label>Intake Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>