force-app/main/default/objects/Review__c/fields/Intake_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Intake_Assessment_Notes__c</fullName>
    <label>Intake Assessment - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>