force-app/main/default/objects/Review__c/fields/Intake_Assessment_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Intake_Assessment_Score_c__c</fullName>
    <formula>CASE(
    TEXT(Intake_Assessment__c),
    &apos;Compliance&apos;, 100,
    &apos;Partial Compliance&apos;, 50,
    &apos;Non-Compliance&apos;, 0,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake_Assessment_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>