force-app/main/default/objects/Review__c/fields/Master_Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Treatment_Plan__c</fullName>
    <label>Master Treatment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>