force-app/main/default/objects/Review__c/fields/Master_Treatment_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Master_Treatment_Plan_Notes__c</fullName>
    <label>Master Treatment Plan - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>