force-app/main/default/objects/Review__c/fields/Ongoing_Comments_and_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Comments_and_Recommendations__c</fullName>
    <label>Ongoing - Comments and Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>