force-app/main/default/objects/Review__c/fields/Pre_Admission_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Pre_Admission_Assessment__c</fullName>
    <label>Pre-Admission Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>