force-app/main/default/objects/Review__c/fields/Pre_Admission_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Admission_Assessment_Notes__c</fullName>
    <label>Pre-Admission Assessment - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>