force-app/main/default/objects/Review__c/fields/Pre_Admission_Assessment_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Pre_Admission_Assessment_Score_c__c</fullName>
    <formula>CASE( 
  TEXT(Pre_Admission_Assessment__c), 
  &apos;Compliance&apos;, 100, 
  &apos;Partial Compliance&apos;, 50, 
  &apos;Non-Compliance&apos;, 0, 
  null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre_Admission_Assessment_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>