force-app/main/default/objects/Review__c/fields/Psychiatric_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Psychiatric_Evaluation__c</fullName>
    <label>Psychiatric Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>