force-app/main/default/objects/Review__c/fields/Psychiatric_Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Psychiatric_Evaluation_Notes__c</fullName>
    <label>Psychiatric Evaluation - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>