force-app/main/default/objects/Review__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <label>Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alison Watros</fullName>
            </value>
            <value>
                <fullName>Amber Wrye</fullName>
            </value>
            <value>
                <fullName>Anna Lisa DeLima</fullName>
            </value>
            <value>
                <fullName>Barbara Parchment</fullName>
            </value>
            <value>
                <fullName>Blaise Amendolace</fullName>
            </value>
            <value>
                <fullName>Cara Bantom-O&apos;Neill</fullName>
            </value>
            <value>
                <fullName>David Tejeda</fullName>
            </value>
            <value>
                <fullName>Deb Kuzmin</fullName>
            </value>
            <value>
                <fullName>Eulices Montiel-Fernandez</fullName>
            </value>
            <value>
                <fullName>Heather Howard</fullName>
            </value>
            <value>
                <fullName>Ingrid VanAlstyne</fullName>
            </value>
            <value>
                <fullName>Jennifer Pinkerton</fullName>
            </value>
            <value>
                <fullName>John Dyben</fullName>
            </value>
            <value>
                <fullName>Joshua Love</fullName>
            </value>
            <value>
                <fullName>Kaisha Thomas</fullName>
            </value>
            <value>
                <fullName>Laura Golden</fullName>
            </value>
            <value>
                <fullName>Melanie Dinardo</fullName>
            </value>
            <value>
                <fullName>Molly Williams</fullName>
            </value>
            <value>
                <fullName>Samantha Beyer</fullName>
            </value>
            <value>
                <fullName>Sandra Betancourt</fullName>
            </value>
            <value>
                <fullName>Scott Vandenburg</fullName>
            </value>
            <value>
                <fullName>Shea Barakatt</fullName>
            </value>
            <value>
                <fullName>Stacy Grossman</fullName>
            </value>
            <value>
                <fullName>Stephanie Avery</fullName>
            </value>
            <value>
                <fullName>Stephen Honaker</fullName>
            </value>
            <value>
                <fullName>Suzanne Sherwood</fullName>
            </value>
            <value>
                <fullName>Tommy McGee</fullName>
            </value>
            <value>
                <fullName>Vanessa Brenner</fullName>
            </value>
            <value>
                <fullName>Vidya Nair</fullName>
            </value>
            <value>
                <fullName>Weston Probst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>