force-app/main/default/objects/Review__c/fields/Transfer_Note__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Note__c</fullName>
    <label>Transfer Note</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>