force-app/main/default/objects/Review__c/fields/Transfer_Note_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Note_Notes__c</fullName>
    <label>Transfer Note - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>