force-app/main/default/objects/Review__c/fields/Treatment_Plan_Review__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan_Review__c</fullName>
    <label>Treatment Plan Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>