force-app/main/default/objects/Review__c/fields/Treatment_Plan_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan_Review_Notes__c</fullName>
    <label>Treatment Plan Review - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>