force-app/main/default/objects/Review__c/fields/UDS_at_Admission__c.field-meta.xml
<CustomField>
    <fullName>UDS_at_Admission__c</fullName>
    <label>UDS at Admission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>