force-app/main/default/objects/Review__c/fields/UDS_at_Admission_Notes__c.field-meta.xml
<CustomField>
    <fullName>UDS_at_Admission_Notes__c</fullName>
    <label>UDS at Admission - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>