force-app/main/default/objects/Review__c/fields/Weekly_Visit__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Visit__c</fullName>
    <label>Weekly Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Scoring</valueSetName>
    </valueSet>
</CustomField>