force-app/main/default/objects/Review__c/fields/Weekly_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Visit_Notes__c</fullName>
    <label>Weekly Visit - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>