force-app/main/default/objects/Review__c/recordTypes/Admission_Review.recordType-meta.xml
<RecordType>
    <fullName>Admission_Review</fullName>
    <active>true</active>
    <label>Admission Review</label>
</RecordType>