force-app/main/default/objects/Review__c/recordTypes/Ongoing_Review.recordType-meta.xml
<RecordType>
    <fullName>Ongoing_Review</fullName>
    <active>true</active>
    <label>Ongoing Review</label>
</RecordType>